[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 669.0
margin_top = 114.0
margin_right = 940.0
margin_bottom = 395.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 19.0
margin_top = 21.0
margin_right = 250.0
margin_bottom = 216.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 720.0
margin_top = 144.0
margin_right = 805.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true

[node name="Button" type="Button" parent="."]
margin_left = 750.0
margin_top = 347.0
margin_right = 855.0
margin_bottom = 384.0
text = "Show"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 131.0
margin_top = 115.0
margin_right = 402.0
margin_bottom = 442.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
margin_left = 19.0
margin_top = 21.0
margin_right = 250.0
margin_bottom = 216.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 178.0
margin_top = 142.0
margin_right = 263.0
margin_bottom = 231.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 153.0
margin_top = 346.0
margin_right = 308.0
margin_bottom = 382.0

[node name="Button2" type="Button" parent="."]
margin_left = 329.0
margin_top = 350.0
margin_right = 367.0
margin_bottom = 380.0
text = "Add"

[node name="Button3" type="Button" parent="."]
margin_left = 151.0
margin_top = 397.0
margin_right = 373.0
margin_bottom = 429.0
text = "Limpar"

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 476.0
margin_top = 414.0
margin_right = 873.0
margin_bottom = 554.0
rect_pivot_offset = Vector2( 318, 40 )
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="ColorRect3" type="ColorRect" parent="ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 14.0
margin_right = -31.0
margin_bottom = -76.0
rect_pivot_offset = Vector2( 318, 40 )
color = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 594.0
margin_top = 436.0
margin_right = 756.0
margin_bottom = 468.0

[node name="Button4" type="Button" parent="."]
margin_left = 517.0
margin_top = 502.0
margin_right = 832.0
margin_bottom = 542.0
text = "Show the true"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
